--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -36,9 +36,9 @@ staged = "✚"
 renamed = "➜"
 deleted = "✖"
 stashed = "*"
-ahead = "⬆"
-behind = "⬇"
-diverged = "⬆⬇"
+ahead = "▲"
+behind = "▼"
+diverged = "▲▼"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
